--- a/MiniShellFramework/MiniShellFramework.csproj
+++ b/MiniShellFramework/MiniShellFramework.csproj
@@ -1,182 +1,29 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{A9AB7515-A370-4ED0-A99B-61428F9BC034}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MiniShellFramework</RootNamespace>
-    <AssemblyName>MiniShellFramework</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
-    <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>KeyPair.snk</AssemblyOriginatorKeyFile>
-    <CodeContractsAssemblyMode>1</CodeContractsAssemblyMode>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+
+    <TargetFramework>net48</TargetFramework>
+
+    <Description>"Mini Shell extentension Framework"</Description>
+    <Company>V.B.A. Derks</Company>
+    <Authors>V.B.A. Derks</Authors>
+    <Version>0.2.0</Version>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>0.2.0.0</FileVersion>
+    <Copyright>Copyright 2019 V.B.A. Derks</Copyright>
+    <Platforms>AnyCPU</Platforms>
+    <Configurations>Debug;Release;Checked</Configurations>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DocumentationFile>
-    </DocumentationFile>
-    <NoWarn />
-    <Prefer32Bit>false</Prefer32Bit>
-    <CodeAnalysisRuleSet>..\mmsf.ruleset</CodeAnalysisRuleSet>
+    <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DocumentationFile>
-    </DocumentationFile>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Checked|AnyCPU'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\Checked\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DebugType>full</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <CodeAnalysisLogFile>bin\Debug\MiniShellFramework.dll.CodeAnalysisLog.xml</CodeAnalysisLogFile>
-    <CodeAnalysisUseTypeNameInSuppression>true</CodeAnalysisUseTypeNameInSuppression>
-    <CodeAnalysisModuleSuppressionsFile>GlobalSuppressions.cs</CodeAnalysisModuleSuppressionsFile>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <CodeAnalysisRuleSetDirectories>;D:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\\Rule Sets</CodeAnalysisRuleSetDirectories>
-    <CodeAnalysisIgnoreBuiltInRuleSets>true</CodeAnalysisIgnoreBuiltInRuleSets>
-    <CodeAnalysisRuleDirectories>;D:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
-    <CodeAnalysisIgnoreBuiltInRules>true</CodeAnalysisIgnoreBuiltInRules>
-    <CodeAnalysisFailOnMissingRules>false</CodeAnalysisFailOnMissingRules>
-    <CodeContractsEnableRuntimeChecking>False</CodeContractsEnableRuntimeChecking>
-    <CodeContractsRuntimeOnlyPublicSurface>False</CodeContractsRuntimeOnlyPublicSurface>
-    <CodeContractsRuntimeThrowOnFailure>True</CodeContractsRuntimeThrowOnFailure>
-    <CodeContractsRuntimeCallSiteRequires>False</CodeContractsRuntimeCallSiteRequires>
-    <CodeContractsRunCodeAnalysis>True</CodeContractsRunCodeAnalysis>
-    <CodeContractsNonNullObligations>True</CodeContractsNonNullObligations>
-    <CodeContractsBoundsObligations>False</CodeContractsBoundsObligations>
-    <CodeContractsArithmeticObligations>False</CodeContractsArithmeticObligations>
-    <CodeContractsRedundantAssumptions>True</CodeContractsRedundantAssumptions>
-    <CodeContractsRunInBackground>True</CodeContractsRunInBackground>
-    <CodeContractsShowSquigglies>False</CodeContractsShowSquigglies>
-    <CodeContractsUseBaseLine>False</CodeContractsUseBaseLine>
-    <CodeContractsEmitXMLDocs>True</CodeContractsEmitXMLDocs>
-    <CodeContractsCustomRewriterAssembly />
-    <CodeContractsCustomRewriterClass />
-    <CodeContractsLibPaths />
-    <CodeContractsExtraRewriteOptions />
-    <CodeContractsExtraAnalysisOptions />
-    <CodeContractsBaseLineFile />
-    <CodeContractsRuntimeCheckingLevel>Full</CodeContractsRuntimeCheckingLevel>
-    <CodeContractsReferenceAssembly>Build</CodeContractsReferenceAssembly>
-    <DocumentationFile>
-    </DocumentationFile>
-    <CodeContractsCacheAnalysisResults>True</CodeContractsCacheAnalysisResults>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="PresentationFramework" />
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" PrivateAssets="All" />
+    <AdditionalFiles Include="stylecop.json" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="ClipFormat.cs" />
-    <Compile Include="ColumnProviderBase.cs" />
-    <Compile Include="ComTypes\DrawItem.cs" />
-    <Compile Include="ComTypes\IColumnProvider.cs" />
-    <Compile Include="ComTypes\IContextMenu.cs" />
-    <Compile Include="ComTypes\IContextMenu2.cs" />
-    <Compile Include="ComTypes\IInitializeWithItem.cs" />
-    <Compile Include="ComTypes\IShellPropSheetExt.cs" />
-    <Compile Include="ComTypes\IThumbnailProvider.cs" />
-    <Compile Include="ComTypes\ListViewAlignment.cs" />
-    <Compile Include="ComTypes\MenuItemInfoMask.cs" />
-    <Compile Include="ComTypes\MenuItemInfoType.cs" />
-    <Compile Include="ComTypes\PropSheetPage.cs" />
-    <Compile Include="ComTypes\QueryContextMenuOptions.cs" />
-    <Compile Include="ComTypes\ShellColumnData.cs" />
-    <Compile Include="ComTypes\ShellColumnId.cs" />
-    <Compile Include="ComTypes\ShellColumnInfo.cs" />
-    <Compile Include="ComTypes\ShellColumnInitializeInfo.cs" />
-    <Compile Include="ComTypes\ShellColumnState.cs" />
-    <Compile Include="ComTypes\ThumbnailAlphaType.cs" />
-    <Compile Include="Facility.cs" />
-    <Compile Include="FormatEtcExtensions.cs" />
-    <Compile Include="GetCommandStringOptions.cs" />
-    <Compile Include="GlobalSuppressions.cs" />
-    <Compile Include="Guids.cs" />
-    <Compile Include="IMenuHost.cs" />
-    <Compile Include="PropertySheetPage.cs" />
-    <Compile Include="RegistryExtensions.cs" />
-    <Compile Include="RootKey.cs" />
-    <Compile Include="SafeNativeMethods.cs" />
-    <Compile Include="Severity.cs" />
-    <Compile Include="ComTypes\StorageModes.cs" />
-    <Compile Include="HResults.cs" />
-    <Compile Include="ClipboardFormatDrop.cs" />
-    <Compile Include="FileOperation.cs" />
-    <Compile Include="ComStream.cs" />
-    <Compile Include="ContextMenuBase.cs" />
-    <Compile Include="FolderCopyHookBase.cs" />
-    <Compile Include="CustomMenuHandler.cs" />
-    <Compile Include="ComTypes\IInitializeWithStream.cs" />
-    <Compile Include="InfoTipBase.cs" />
-    <Compile Include="ComTypes\InvokeCommandInfo.cs" />
-    <Compile Include="ComTypes\IInitializeWithFile.cs" />
-    <Compile Include="ComTypes\InfoTipOptions.cs" />
-    <Compile Include="ComTypes\IContextMenu3.cs" />
-    <Compile Include="ComTypes\ICopyHook.cs" />
-    <Compile Include="ComTypes\IShellExtInit.cs" />
-    <Compile Include="ComTypes\IShellFolder.cs" />
-    <Compile Include="ComTypes\IPersist.cs" />
-    <Compile Include="ComTypes\IQueryInfo.cs" />
-    <Compile Include="MeasureItemStruct.cs" />
-    <Compile Include="Menu.cs" />
-    <Compile Include="ComTypes\MenuItemInfo.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ShellExtension.cs" />
-    <Compile Include="ShellExtensionInit.cs" />
-    <Compile Include="ShellPropertySheetBase.cs" />
-    <Compile Include="SmallBitmapCustomMenuHandler.cs" />
-    <Compile Include="ThumbnailProviderBase.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Class Diagrams\Base Classes.cd" />
-    <None Include="Class Diagrams\Interfaces.cd" />
-    <None Include="KeyPair.snk" />
-  </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
